--- a/src/pages/about/about.f7.html
+++ b/src/pages/about/about.f7.html
@@ -11,7 +11,7 @@
                 </div>
               </div>
               <div class="media-body">
-                <h1>CBH Lib Manager</h1>
+                <h1>CBH Library Manager</h1>
                 <div class="text-overline opacity-75">
                   Giới thiệu hệ thống
                 </div>
@@ -48,10 +48,10 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body monokaijs">
-                      <h5 class="card-title"> Giới thiệu CBH Lib Manager</h5>
+                      <h5 class="card-title"> Giới thiệu CBH Library Manager</h5>
                       <div class="card-text">
-                        <strong>CBH Lib Manager</strong> là một <span class="more">
-                          tiện ích mình tạo ra để giúp phần nào đội ngũ câu lạc bộ CBN Bookaholic Home quản lý việc mượn, kiểm sách dễ dàng và tiện lợi hơn. Tiện ích có thể khá phèn do trình độ mình cũng có hạn nhưng dù sao cũng là tâm huyết của mình dành cho câu lạc bộ nên hãy tiếp nhận nó nhé :v Và với bất kỳ lỗi hay điểm gì khiến bạn không ưng thì cứ thoải mái liên hệ với tớ nhé :v Chúc câu lạc bộ sẽ tiến xa hơn và thành công nha ^^
+                        <strong>CBH Library Manager</strong> <span class="more">
+                          là một tiện ích mình tạo ra để giúp phần nào đội ngũ câu lạc bộ CBN Bookaholic Home quản lý việc mượn, kiểm sách dễ dàng và tiện lợi hơn. Tiện ích có thể khá phèn do trình độ mình cũng có hạn nhưng dù sao cũng là tâm huyết của mình dành cho câu lạc bộ nên hãy tiếp nhận nó nhé :v Và với bất kỳ lỗi hay điểm gì khiến bạn không ưng thì cứ thoải mái liên hệ với tớ nhé :v Chúc câu lạc bộ sẽ tiến xa hơn và thành công nha ^^
                         </span>
                       </p>
                       <button class="btn btn-primary" id="toggle">Rút gọn</button>
