--- a/src/pages/overview/dashboard.f7.html
+++ b/src/pages/overview/dashboard.f7.html
@@ -16,7 +16,7 @@
                 <div class="card-body">
                   <div class="row p-t-20 p-b-20">
                     <div class="my-auto col-md-7">
-                      <h1 class="m-0">${borrowers.length}</h1>
+                      <h1 class="m-0">${borrowingBorrowers.length}</h1>
                       <p class="m-0 text-muted">
                         Số người đang mượn sách
                       </p>
@@ -38,7 +38,7 @@
                 <div class="card-body">
                   <div class="row p-t-20 p-b-20">
                     <div class="my-auto col-md-7">
-                      <h1 class="m-0">${books.length - availableBooks.length}</h1>
+                      <h1 class="m-0">${borrowedBooks.length}</h1>
                       <p class="m-0 text-muted">
                         Số sách đang mượn
                       </p>
@@ -146,6 +146,61 @@
                 `}
               </div>
             </div>
+
+            <div class="col-lg-12 m-b-30">
+              <div class="card m-b-30">
+
+                <div class="card-header">
+                  <div class="card-title">Sắp hết hạn</div>
+                </div>
+                ${nearlyExpiredBorrowers.length !== 0 && $h`
+                <div class="card-body">
+                  <div class="table-responsive" style="margin-top: 20px;">
+                    <table class="table table-hover">
+                      <thead>
+                      <tr>
+                        <th>ID</th>
+                        <th>Tên</th>
+                        <th>Lớp</th>
+                        <th>Mã học sinh</th>
+                        <th>Điện thoại</th>
+                        <th>Email</th>
+                        <th>Ngày hết hạn gần nhất</th>
+                        <th>Hành động</th>
+                      </tr>
+                      </thead>
+                      <tbody id="listBorrowers">
+                      ${nearlyExpiredBorrowers.map((borrower, i) => $h`
+                      <tr>
+                        <td>${i + 1}</td>
+                        <td>${borrower.name}</td>
+                        <td>${borrower.class}</td>
+                        <td>${borrower.student_code}</td>
+                        <td>${borrower.phone_number}</td>
+                        <td>${borrower.email}</td>
+                        <td>${Math.floor((borrower.min_expired_time - new Date().getTime()) / (24 * 60 * 60 * 1000))
+                          + 1} ngày
+                        </td>
+                        <td>
+                          <a href="/borrowers/info/${borrower.student_code}/" class="btn btn-primary btn-sm"
+                             role="button">
+                            <i class="mdi mdi-menu"></i>
+                          </a>
+                        </td>
+                      </tr>
+                      `)}
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+                `}
+                ${nearlyExpiredBorrowers.length === 0 && $h`
+                <div class="card-body">
+                  Không có người mượn sắp hết hạn
+                </div>
+                `}
+              </div>
+            </div>
           </div>
 
         </div>
@@ -159,35 +214,48 @@
 
   export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
     let borrowers = [];
+    let borrowingBorrowers = [];
     let books = [];
-    let availableBooks = [];
+    let borrowedBooks = [];
     let topBooks = [];
     let topBorrowers = [];
+    let nearlyExpiredBorrowers = [];
 
     const resetList = async function () {
       let response = await Clm.api("borrowers/all");
       borrowers = response.data.list_borrowers;
-      console.log(borrowers);
-      borrowers = borrowers.filter(borrower => borrower.current_borrowed_books.length > 0);
-      borrowers.sort((a, b) => {
+      console.log('borrowers', borrowers);
+
+      topBorrowers = borrowers.sort((a, b) => {
         if (a.borrowed_books_amount < b.borrowed_books_amount) return 1;
         else if (a.borrowed_books_amount > b.borrowed_books_amount) return -1;
         else return 0;
-      });
-      topBorrowers = borrowers.slice(0, 10);
+      }).slice(0, 10);
+      console.log('topBorrowers', topBorrowers);
+
+      nearlyExpiredBorrowers = borrowers.filter(borrower =>
+        borrower.min_expired_time &&
+        borrower.min_expired_time - new Date().getTime() <= 3 * 24 * 60 * 60 * 1000 &&
+        borrower.min_expired_time - new Date().getTime() >= 0
+      );
+      console.log('nearlyExpiredBorrowers', nearlyExpiredBorrowers);
+
+      borrowingBorrowers = borrowers.filter(borrower => borrower.current_borrowed_books.length > 0);
+      console.log('borrowingBorrowers', borrowingBorrowers);
 
       response = await Clm.api("books/all");
       books = response.data.list_books;
-      topBooks = books.filter(book => book.borrowed_times > 0);
-      topBooks.sort((a, b) => {
+      console.log('books', books);
+
+      topBooks = books.filter(book => book.borrowed_times > 0).sort((a, b) => {
         if (a.borrowed_times < b.borrowed_times) return 1;
         else if (a.borrowed_times > b.borrowed_times) return -1;
         else return 0;
-      });
-      topBooks = topBooks.slice(0, 10);
+      }).slice(0, 10);
+      console.log('topBooks', topBooks);
 
-      response = await Clm.api("books/available");
-      availableBooks = response.data.list_available_books;
+      borrowedBooks = books.filter(book => book.borrowed_info[0] && book.borrowed_info[0].is_borrowed);
+      console.log('borrowedBooks', borrowedBooks);
       $update();
     }
 
